@startuml
!theme plain
skinparam linetype ortho


class InteractuableFactory {
    + {static} crearInteractuable( :String) : Interactuable
}

class Ninguno {
    + interactuarCon( :Gladiador)
}

class Bacanal {
    + interactuarCon( :Gladiador)
}

class Lesion {
    + interactuarCon( :Gladiador)
}

class Fiera {
    + interactuarCon( :Gladiador)
}

class Equipamiento {
    + interactuarCon( :Gladiador)
}

class Comida {
    + interactuarCon( :Gladiador)
}

class Llegada {
    + interactuarCon( :Gladiador)
}

interface Interactuable{
    + interactuarCon( :Gladiador)
}

InteractuableFactory .u.> Ninguno
InteractuableFactory .u.> Bacanal
InteractuableFactory .u.> Lesion
InteractuableFactory .u.> Fiera
InteractuableFactory .u.> Equipamiento
InteractuableFactory .u.> Comida
InteractuableFactory .u.> Llegada

Interactuable <|.. Bacanal
Interactuable <|.. Lesion
Interactuable <|.. Comida
Interactuable <|.. Ninguno
Interactuable <|.. Fiera
Interactuable <|.. Equipamiento
Interactuable <|.. Llegada

@enduml